# topomesh

./: CMakeLists.txt
internal/alg/: fillhoneycombs.cpp  fillhoneycombs.h  letter.cpp  letter.h  new_letter.cpp  new_letter.h  opti.cpp  trans.h  volumeMesh.cpp  volumeMesh.h
internal/clustering/: k-means.h
internal/data/: CMesh.cpp  CMesh.h
internal/interface/: dlpdata.cpp  fillhole.cpp  hex.cpp  honeycomb.cpp  letter.cpp  poly.cpp  serial.cpp  subdivision.cpp  utils.cpp
internal/mesh/: dumplicate.cpp  dumplicate.h  trans.h
internal/polygon/: comb.cpp  comb.h  meshslice.cpp  meshslice.h  polygon.cpp  polygon.h  slicehelper.cpp  slicehelper.h  sparsegrid.h  utilconst.h  vertex.h
topomesh/alg/: convert.h  cutting.cpp  cutting.h  dijkstra.h  earclipping.cpp  earclipping.h  fillhoneycombs.cpp  fillhoneycombs.h  floyd.h  laplacian.cpp  laplacian.h  letter.cpp  letter.h  rayTriangleIntersect.cpp  rayTriangleIntersect.h  remesh.cpp  remesh.h  segmentation.cpp  segmentation.h  solidtriangle.cpp  solidtriangle.h  subdivision.cpp  subdivision.h  utils.cpp  utils.h
topomesh/clustering/: k-means.cpp  k-means.h
topomesh/data/: CMesh.cpp  CMesh.h  convert.cpp  convert.h  entrance.cpp  entrance.h  mmeshFace.cpp  mmeshFace.h  mmeshHalfEdge.h  mmeshVertex.cpp  mmeshVertex.h  mmesht.cpp  mmesht.h  serial.cpp  serial.h
topomesh/honeycomb/: Geometry.h  Hexagon.h  HoneyComb.h  Matrix.h  Mesh.h  Point.h  Polyline.h
topomesh/interface/: concave.cpp  dlpdata.cpp  dlpdata.h  dslicer.cpp  dslicer.h  honeycomb.cpp  honeycomb.h  idata.cpp  idata.h  interactiveslice.cpp  letter.cpp  (+8 more)
(+22 files in other folders)
